# web-crawler

./: .gitignore  GEMINI.md  docker-compose.yml  main.py  notes.txt  pyproject.toml
data/serp_previous_searches/: 1797957.json  1798057.json  1814337.json  303985.json
src/: ContactExtractor.py  UrlSelector.py  config.py  craw4ai_client.py  docker_example.py  fetch_debtor.py  init_db.py  main.py  serp_result_parser.py  utils.py
